Added 'categories' small tags for each review card
added header to let you know
which category you're viewing

can't figure out how to get the api call
on the categories page to display
ALL of the parameters for the cars that
are part of that category array.

whatever i guess

--- a/strapiStore/frontend/app/globals.css
+++ b/strapiStore/frontend/app/globals.css
@@ -29,6 +29,14 @@ a {
   border-bottom: 15px double;
 }
 
+.site-header .categories {
+  text-align: right;
+}
+
+.site-header .categories a {
+  margin-left: 10px;
+}
+
 /* review list */
 .review-card {
   background: linear-gradient(to top, #444444, #313131);
