--- a/strapiStore/frontend/app/globals.css
+++ b/strapiStore/frontend/app/globals.css
@@ -27,10 +27,13 @@ a {
   color: #2a66d6;
   padding-bottom: 10px;
   border-bottom: 15px double;
+  text-shadow: 2px 1.5px 0px #6796ec;
+
 }
 
 .site-header .categories {
   text-align: right;
+  color: rgb(204, 204, 204);
 }
 
 .site-header .categories a {
@@ -44,7 +47,7 @@ a {
   margin: 60px auto;
   padding: 1px 20px 20px 90px;
   position: relative;
-  border-radius: 40px; /* Added rounded edges */
+  border-radius: 20px; /* Added rounded edges */
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2); /* Added drop shadow */
 }
 
